services page__done

--- a/src/services.html
+++ b/src/services.html
@@ -11,14 +11,48 @@ title: Services
     <div class="services">
         <div class="row">
             <div class="col-lg-4">
-                <div class="services__item"></div>
+                <div class="services__item">
+                <svg class="services__icon">
+                    <use xlink:href="#layers"></use>
+                </svg>
+                <div class="services__title">Web-design</div>
+                <div class="services__text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus perferendis, consectetur sit assumenda laudantium ipsa rem voluptates officiis esse vero ex alias velit totam ducimus consequuntur inventore deserunt asperiores repellat.
+                    </p>
+                </div>
+                </div>
             </div>
 
-            <div class="col-lg-4"></div>
-            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                <div class="services__item">
+                <svg class="services__icon">
+                    <use xlink:href="#front"></use>
+                </svg>
+                <div class="services__title">Front-end</div>
+                <div class="services__text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus perferendis, consectetur sit assumenda laudantium ipsa rem voluptates officiis esse vero ex alias velit totam ducimus consequuntur inventore deserunt asperiores repellat.
+                    </p>
+                </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="services__item">
+                <svg class="services__icon">
+                    <use xlink:href="#back"></use>
+                </svg>
+                <div class="services__title">Back-end</div>
+                <div class="services__text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus perferendis, consectetur sit assumenda laudantium ipsa rem voluptates officiis esse vero ex alias velit totam ducimus consequuntur inventore deserunt asperiores repellat.
+                    </p>
+                </div>
+                </div>
+            </div>
+            </div> <!-- Row -->
+        </div> <!-- Services -->
 
-        </div>
-    </div>
 
     <a class="btn btn--pink" href="#" data-toggle="modal" data-target="#request-modal">Make a request</a>
-</div>
+    </div> <!-- Container -->
