--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -6,19 +6,38 @@ title: Portfolio
 <div class="container">
     <h1 class="content__title">Portfolio</h1>
 
-    <div class="portfolio">
-        <div class="portfolio__item">
-           <a class="portfolio__link " href="#" target="_blank">
-                <img class="portfolio__img" src="assets/img/1.jpg" alt="">
-            </a>
-            <div class="portfolio__title">Website Omnifood.com</div>
-        </div> <!-- Portfolio item -->
-
-        <div class="portfolio__item">
-           <a class="portfolio__link " href="#" target="_blank">
-                <img class="portfolio__img" src="assets/img/2.jpg" alt="">
-            </a>
-            <div class="portfolio__title">Website Omnifood.com</div>
-        </div> <!-- Portfolio item -->
+    <div class="portfolio" id="portfolio">
+        <div>
+            <div class="portfolio__item">
+                <a class="portfolio__link " href="#" target="_blank">
+                    <img class="portfolio__img" src="assets/img/1.jpg" alt="">
+                </a>
+                <div class="portfolio__title">Website Omnifood.com</div>
+            </div> <!-- Portfolio item -->
+        </div>
+        <div>
+            <div class="portfolio__item">
+                <a class="portfolio__link " href="#" target="_blank">
+                    <img class="portfolio__img" src="assets/img/1.jpg" alt="">
+                </a>
+                <div class="portfolio__title">Website Omnifood.com</div>
+            </div>
+        </div>
+        <div>
+            <div class="portfolio__item">
+                <a class="portfolio__link " href="#" target="_blank">
+                    <img class="portfolio__img" src="assets/img/1.jpg" alt="">
+                </a>
+                <div class="portfolio__title">Website Omnifood.com</div>
+            </div> <!-- Portfolio item -->
+        </div>
+        <div>
+            <div class="portfolio__item">
+                <a class="portfolio__link " href="#" target="_blank">
+                    <img class="portfolio__img" src="assets/img/1.jpg" alt="">
+                </a>
+                <div class="portfolio__title">Website Omnifood.com</div>
+            </div> <!-- Portfolio item -->
+        </div>
     </div> <!-- Portfolio -->
 </div> <!-- Container -->
