--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -6,38 +6,51 @@ title: Portfolio
 <div class="container">
     <h1 class="content__title">Portfolio</h1>
 
-    <div class="portfolio" id="portfolio">
-        <div>
-            <div class="portfolio__item">
-                <a class="portfolio__link " href="#" target="_blank">
-                    <img class="portfolio__img" src="assets/img/1.jpg" alt="">
-                </a>
-                <div class="portfolio__title">Website Omnifood.com</div>
-            </div> <!-- Portfolio item -->
-        </div>
-        <div>
-            <div class="portfolio__item">
-                <a class="portfolio__link " href="#" target="_blank">
-                    <img class="portfolio__img" src="assets/img/1.jpg" alt="">
-                </a>
-                <div class="portfolio__title">Website Omnifood.com</div>
+    <div class="portfolio">
+        <button class="portfolio__arrow  portfolio__arrow--prev" type="button" id="portfolio-arrow-prev">
+            <svg class="portfolio__arrow-icon">
+                <use xlink:href="#prev"></use>
+            </svg>
+        </button>
+        <button class="portfolio__arrow  portfolio__arrow--next" type="button" id="portfolio-arrow-next">
+            <svg class="portfolio__arrow-icon">
+                <use xlink:href="#next"></use>
+            </svg>
+        </button>
+
+        <div id="portfolio">
+            <div>
+                <div class="portfolio__item">
+                    <a class="portfolio__link " href="#" target="_blank">
+                        <img class="portfolio__img" src="assets/img/1.jpg" alt="">
+                    </a>
+                    <div class="portfolio__title">Website Omnifood.com</div>
+                </div> <!-- Portfolio item -->
             </div>
-        </div>
-        <div>
-            <div class="portfolio__item">
-                <a class="portfolio__link " href="#" target="_blank">
-                    <img class="portfolio__img" src="assets/img/1.jpg" alt="">
-                </a>
-                <div class="portfolio__title">Website Omnifood.com</div>
-            </div> <!-- Portfolio item -->
-        </div>
-        <div>
-            <div class="portfolio__item">
-                <a class="portfolio__link " href="#" target="_blank">
-                    <img class="portfolio__img" src="assets/img/1.jpg" alt="">
-                </a>
-                <div class="portfolio__title">Website Omnifood.com</div>
-            </div> <!-- Portfolio item -->
+            <div>
+                <div class="portfolio__item">
+                    <a class="portfolio__link " href="#" target="_blank">
+                        <img class="portfolio__img" src="assets/img/1.jpg" alt="">
+                    </a>
+                    <div class="portfolio__title">Website Omnifood.com</div>
+                </div>
+            </div>
+            <div>
+                <div class="portfolio__item">
+                    <a class="portfolio__link " href="#" target="_blank">
+                        <img class="portfolio__img" src="assets/img/1.jpg" alt="">
+                    </a>
+                    <div class="portfolio__title">Website Omnifood.com</div>
+                </div> <!-- Portfolio item -->
+            </div>
+            <div>
+                <div class="portfolio__item">
+                    <a class="portfolio__link " href="#" target="_blank">
+                        <img class="portfolio__img" src="assets/img/1.jpg" alt="">
+                    </a>
+                    <div class="portfolio__title">Website Omnifood.com</div>
+                </div> <!-- Portfolio item -->
+            </div>
         </div>
     </div> <!-- Portfolio -->
 </div> <!-- Container -->
