--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -18,7 +18,7 @@ title: Portfolio
             </svg>
         </button>
 
-        <div id="portfolio">
+        <div class="portfolio__slider" id="portfolio">
             <div>
                 <div class="portfolio__item">
                     <a class="portfolio__link " href="#" target="_blank">
@@ -46,7 +46,7 @@ title: Portfolio
             <div>
                 <div class="portfolio__item">
                     <a class="portfolio__link " href="#" target="_blank">
-                        <img class="portfolio__img" src="assets/img/1.jpg" alt="">
+                        <img class="portfolio__img" src="assets/img/2.jpg" alt="">
                     </a>
                     <div class="portfolio__title">Website Omnifood.com</div>
                 </div> <!-- Portfolio item -->
